--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <h1 class="blend">80 лет Курской битве</h1>
         </div>
         <div class="esse">
-            <img src="https://yuzhno-sahalinsk.tdfarfor.ru/wa-data/public/shop/products/25/41/14125/images/30772/30772.750x0.jpg">
+            <img src="https://vsegda-pomnim.com/uploads/posts/2023-07/1689641941_vsegda-pomnim-com-p-starii-list-foto-18.jpg">
              <h1>Курская битва проходила летом 1943 года. Это сражение является одним из ключевых в Великой Отечественной войне. Битва стала переломным моментом всей войны и знаменовала полный переход инициативы наступления к Красной армии.</h1>
 
             <h1>Во время сражения советские войска, грамотно подготовив сильнейшую оборону, смогли отбить наступление противника, тем самым заставив его перейти в защиту, после чего почти сразу было организовано контрнаступление Красной армии.</h1>
@@ -30,7 +30,7 @@
             <h1>Данный сайт был создан с целью вновь рассказать о страшных событиях этой битвы, ведь крайне важно напоминать о подвиге наших предков, чтобы помешать исказить факты и не забыть о том, какой ценой они его совершили.</h1>
             <div class="voice_teg"><p>Аудио версия</p></div>
             <audio controls class="voice">
-                <source src="{% static 'main/voice/voice-esse.mp3' %}" type="audio/mpeg" />
+                <source src='main/voice/voice-esse.mp3' type="audio/mpeg" />
             </audio>
             <div class = 'check_more'>
                     <p>Узнай больше!</p>
