--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <h1 class="blend">80 лет Курской битве</h1>
         </div>
         <div class="esse">
-            <img src="https://vsegda-pomnim.com/uploads/posts/2023-07/1689641941_vsegda-pomnim-com-p-starii-list-foto-18.jpg">
+            <img src="https://img.freepik.com/free-photo/vintage-grunge-paper-background_1048-10911.jpg?w=740&t=st=1700403958~exp=1700404558~hmac=d798f25e5f7bff90e2d38930f33c387bd00a2cca50be6520a66230973f731115">
              <h1>Курская битва проходила летом 1943 года. Это сражение является одним из ключевых в Великой Отечественной войне. Битва стала переломным моментом всей войны и знаменовала полный переход инициативы наступления к Красной армии.</h1>
 
             <h1>Во время сражения советские войска, грамотно подготовив сильнейшую оборону, смогли отбить наступление противника, тем самым заставив его перейти в защиту, после чего почти сразу было организовано контрнаступление Красной армии.</h1>
