--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <h1>Данный сайт был создан с целью вновь рассказать о страшных событиях этой битвы, ведь крайне важно напоминать о подвиге наших предков, чтобы помешать исказить факты и не забыть о том, какой ценой они его совершили.</h1>
             <div class="voice_teg"><p>Аудио версия</p></div>
             <audio controls class="voice">
-                <source src='main/voice/voice-esse.mp3' type="audio/mpeg" />
+                <source src='voice-esse.mp3' type="audio/mpeg" />
             </audio>
             <div class = 'check_more'>
                     <p>Узнай больше!</p>
