--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
         <link href = "fonts/roboto/stylesheet.css" rel = "stylesheet" type = "text/css" />
         <link href="https://fonts.googleapis.com/css2?family=Montserrat+Alternates:ital,wght@1,600&display=swap" rel="stylesheet">
         <link rel="stylesheet" href='main-style.css'>
-        <link href="https://allfont.ru/allfont.css?fonts=b52" rel="stylesheet" type="text/css" />
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Kdam+Thmor+Pro&family=Russo+One&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Russo+One&display=swap" rel="stylesheet">
         <title>mainpage</title>
 
