--- a/index.html
+++ b/index.html
@@ -21,9 +21,10 @@
         <div class="parallax">
             <h1 class="blend">80 лет Курской битве</h1>
         </div>
-        <div class="esse">
+        <div class="esse"<style> @import url('https://fonts.googleapis.com/css2?family=Kdam+Thmor+Pro&family=Russo+One&display=swap');</style>>
             <img src="https://img.freepik.com/free-photo/vintage-grunge-paper-background_1048-10911.jpg?w=740&t=st=1700403958~exp=1700404558~hmac=d798f25e5f7bff90e2d38930f33c387bd00a2cca50be6520a66230973f731115">
-             <h1>Курская битва проходила летом 1943 года. Это сражение является одним из ключевых в Великой Отечественной войне. Битва стала переломным моментом всей войны и знаменовала полный переход инициативы наступления к Красной армии.</h1>
+             
+            <h1>Курская битва проходила летом 1943 года. Это сражение является одним из ключевых в Великой Отечественной войне. Битва стала переломным моментом всей войны и знаменовала полный переход инициативы наступления к Красной армии.</h1>
 
             <h1>Во время сражения советские войска, грамотно подготовив сильнейшую оборону, смогли отбить наступление противника, тем самым заставив его перейти в защиту, после чего почти сразу было организовано контрнаступление Красной армии.</h1>
 
