--- a/index.html
+++ b/index.html
@@ -39,7 +39,9 @@
             <div class = 'check_more'>
                     <p>Узнай больше!</p>
                     <div class = 'all_btn'>
-                        <button onclick="'heroes-page.html'" class="buttons">Герои битвы</button>
+                        <form action="heroes-page.html" target="_blank">
+                        <button class="buttons">Герои битвы</button>
+                        </form>
                         <button onclick="document.location='history'" class="buttons">Рассказы очевидцев</button>
                         <button onclick="document.location='inform_page'" class="buttons">Вооружение</button>
                     </div>
