--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <div class = 'check_more'>
                     <p>Узнай больше!</p>
                     <div class = 'all_btn'>
-                        <form action="heroes-page.html" target="_blank">
+                        <form action="page/heroes-page.html" target="_blank">
                         <button class="buttons">Герои битвы</button>
                         </form>
                         <button onclick="document.location='history'" class="buttons">Рассказы очевидцев</button>
