--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
             <div class = 'check_more'>
                     <p>Узнай больше!</p>
                     <div class = 'all_btn'>
-                        <form action="page/heroes-page.html" target="_blank">
-                        <button class="buttons">Герои битвы</button>
-                        </form>
+                        
+                        <a href="page/new.html" class="buttons">Герои битвы</a>
+                        
                         <button onclick="document.location='history'" class="buttons">Рассказы очевидцев</button>
                         <button onclick="document.location='inform_page'" class="buttons">Вооружение</button>
                     </div>
