--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                     <p>Узнай больше!</p>
                     <div class = 'all_btn'>
                         
-                        <a href="page/new.html" class="buttons">Герои битвы</a>
+                        <a href="page/heroes-page.html" class="buttons">Герои битвы</a>
                         
                         <button onclick="document.location='history'" class="buttons">Рассказы очевидцев</button>
                         <button onclick="document.location='inform_page'" class="buttons">Вооружение</button>
